--- a/styles/index.processed.css
+++ b/styles/index.processed.css
@@ -1,63 +1,48 @@
 header {
-  display: flex;
-  align-items: center;
-  /* Vertikal sentrering */
-  justify-content: center;
-  /* Horisontal sentrering (valgfritt) */
-  height: 201px;
-  text-align: center;
-  background: #f7f2de;
-  height: 68px;
+	display: flex;
+	justify-content: center; /* Horisontal sentrering (valgfritt) */
+	text-align: center;
+	background: #f7f2de;
+	padding: 10px;
 }
 
 logo {
-  font-family: Frank Ruhl Libre;
-  text-transform: uppercase;
-  display: flex;
+	font-family: Frank Ruhl Libre;
+	text-transform: uppercase;
+	display: flex;
+}
+
+header logo {
+	font-size: 24px;
+	align-items: center; /* Vertikal sentrering */
+	justify-content: center; /* Horisontal sentrg (valgfritt) */
 }
 
 body {
-  margin: 0;
-  background: white;
-  padding: 0;
-  border: none;
+	margin: 0;
+	background: white;
+	padding: 0;
+	border: none;
 }
 
 .logo-bilde {
-  font-size: 200px;
-  color: blue;
+	font-size: 200px;
+	color: white;
+	
 }
 
-p{
-  color: yellow;
-}
+img {
+  width: 100%;
+ } 
 
-p{
-  color: grey;
-}
-
-
-
-.logo-bilde p{
-  color: red;
-}
-
-.logo-topp {
-  font-size: 24px;
-  align-items: center;
-  /* Vertikal sentrering */
-  justify-content: center;
-  /* Horisontal sentrering (valgfritt) */
-}
-
-.logo-footer {
-  font-size: 62px;
-  color: white;
+footer logo  {
+	font-size: 62px;
+	color: white;
 }
 
 footer {
-  background: #DC4131;
-  padding-left: 54px;
-  padding-top: 41px;
-  padding-bottom: 93px;
+	background: #dc4131;
+	padding-left: 54px;
+	padding-top: 41px;
+	padding-bottom: 93px;
 }
