--- a/styles/index.processed.css
+++ b/styles/index.processed.css
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-	background: white;
+	background: #f7f2de;
 	border: none;
 }
 
@@ -32,6 +32,14 @@ p {
 	font-family: Frank Ruhl Libre;
 }
 
+.left{
+		text-align: left;
+}
+
+.mb-0 {
+	margin-bottom: 0;
+}
+
 /*NAVIGATION-----------------------------------*/
 
 nav {
@@ -40,6 +48,7 @@ nav {
 	text-align: center;
 	background: #f7f2de;
 	padding: 10px;
+	border-bottom: 1px solid #0b0a08; 
 }
 
 logo {
@@ -122,6 +131,7 @@ header p {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
+	background-color: white;
 }
 
 .white-box {
@@ -168,6 +178,7 @@ header p {
 	}
 
 /*MAIN BROWN-----------------------------------*/
+
 .how-it-works {
   display: flex;               /* Plasserer barna (venstre og høyre kolonne) ved siden av hverandre */
   align-items: center;         /* Vertikalt sentrerer venstre kolonne ift. høyre (for estetisk balansert look) */
@@ -176,10 +187,13 @@ header p {
 }
  
 .how-it-works-left {
+	display: flex;  
   flex: 0 0 30%;               /* Fast bredde ~30% av seksjonen for venstre kolonne */
   padding: 1em;                /* Litt luft rundt teksten */
 	border: 1px solid #000;
-	  border-right: none;         /* Fjern linje under siste blokk (da containerens bunnlinje allerede er der) */
+	border-right: none;         /* Fjern linje under siste blokk (da containerens bunnlinje allerede er der) */
+	align-items: center;
+	justify-content: center;
 }
 
 .how-it-works-left h2 {
@@ -193,14 +207,14 @@ header p {
 	display: flex; 
 	flex-direction: row; 
 	flex-wrap: wrap; 
-  padding: 0 5em;              /* Horisontal padding så tekst ikke berører kantene */
 	align-items: left; 
+		border: 1px solid #000;
 }
 
 .how-it-works-right .step {
   display: flex;  
-	padding: 1em 0;              /* Vertikal padding innen hver blokk for luft over/under teksten */
-	border: 1px solid #000;
+	padding: 2.5em 25% 2.5em 5em;              /* Vertikal padding innen hver blokk for luft over/under teksten */
+	border-bottom: 1px solid #000;
 	  align-items: center; 
 }
 
@@ -209,11 +223,13 @@ header p {
 }
 
 .how-it-works-right .step h3 {
-  margin: 0 0 0.5em 0;         /* Liten bunnmargin under tittelen for å skille den fra teksten */
+  margin: 0;
 	font-family: "Arimo", sans-serif;
 	font-weight: 100;
 	font-size: 1rem;
 	align-self: center;  
+	width: 25%;
+	flex-shrink: 0;
 }
 
 
@@ -221,17 +237,16 @@ header p {
   margin: 0 0 1em 0;           /* Margin under avsnitt for luft (siste avsnitt justeres under) */
 	font-family: "Arimo", sans-serif;
 	font-weight: 100;
-	font-size: 1.25rem;
+	font-size: 1rem;
 	text-decoration: none;
 }
 
+.how-it-works-right .step p:last-child {
+	margin: 0;
+}
+
 .how-it-works-right .step a {
-  margin: 0 0 1em 0;           /* Margin under avsnitt for luft (siste avsnitt justeres under) */
-	font-family: "Arimo", sans-serif;
-  font-weight: inherit;   /* arver font-vekt */
-	font-size: 1.25rem;
   color: rgba(0, 0, 0, 0.7);
-	display: block;
 }
 
 .how-it-works-right .step p:last-child {
@@ -258,6 +273,17 @@ h2 {
 	line-height: 2.25rem;
 }
 
+/*PRODUCE-----------------------------------*/
+
+.produce {
+margin-left: 1%;
+
+}
+
+.produce h2{
+	margin-top: 2%
+}
+
 /*FOOTER-----------------------------------*/
 
 footer logo {
@@ -277,12 +303,15 @@ footer h2{
 	text-transform: uppercase;
 	text-align: left;
 	margin-top: 2%;
-	margin-bottom: 0.5%;
+	margin-bottom: 0.6%;
 }
 
 footer p{
 		font-weight: 100;
 		font-size: 1.5rem;
+	  line-height: 1.75rem;
+		margin-bottom: 0.6%;
+	
 }
 
 
@@ -292,18 +321,20 @@ form {
   margin: 0;
   width: 90%;
   max-width: 460px;
-  padding-bottom: 1%;
-
 }
 
 form button {
   display: block;
   width: 100%;
-  margin-top: 10px;
+  margin-top: 19px;
   text-align: center;
 	border-radius: 0.4rem; /* avrundede hjørner */
-	padding: 0.5rem;
+	padding: 0.6rem;
 	border: none;
+	background-color: #e1eafo;
+	color: #0b0a08;
+		border: 2px solid transparent;
+
 }
 
 form input,
@@ -314,12 +345,13 @@ form textarea{
   padding: 0.5rem;
   font-family: inherit;
 	border: none;
+	border: 2px solid transparent;
 }
 
 input:focus,
 textarea:focus {
   outline: none;
-  border: 2px solid #4d9eb3; /* Farge og tykkelse på rammen */
+  border: 2px solid #0b0a08; /* Farge og tykkelse på rammen */
   transition: border 0.2s ease, box-shadow 0.2s ease;
 }
 
