--- a/styles/index.css
+++ b/styles/index.css
@@ -273,7 +273,18 @@ h2 {
 	line-height: 2.25rem;
 }
 
-/*PRODUCE-----------------------------------*/
+
+/*POPULAR-----------------------------------*/
+.popular{
+	background-color: white;
+}
+
+.popular h2{
+	text-align: left;
+	padding-top: 5.625rem;
+}
+
+/*PRODUCE side 2-----------------------------------*/
 
 .produce {
 margin-left: 1%;
@@ -283,6 +294,16 @@ margin-left: 1%;
 .produce h2{
 	margin-top: 2%
 }
+
+/*CHATBOT-----------------------------------*/
+
+.chatbot-image img{
+	    width: 100%;
+      height: 100%;
+      object-fit: cover;    /* beholder proporsjoner, fyller, beskjærer */
+      object-position: center; /* ønsker midtstilling */
+}
+
 
 /*FOOTER-----------------------------------*/
 
@@ -311,10 +332,7 @@ footer p{
 		font-size: 1.5rem;
 	  line-height: 1.75rem;
 		margin-bottom: 0.6%;
-	
 }
-
-
 
 form {
   font-family: "Poppins", sans-serif;
@@ -323,7 +341,7 @@ form {
   max-width: 460px;
 }
 
-form button {
+.form-button {
   display: block;
   width: 100%;
   margin-top: 19px;
@@ -333,9 +351,39 @@ form button {
 	border: none;
 	background-color: #e1eafo;
 	color: #0b0a08;
-		border: 2px solid transparent;
-
+	border: 2px solid transparent;
 }
+
+
+/* Sørg for at wrapperen er relativt posisjonert */
+.input-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+
+/* Stil på selve pil-knappen */
+.submit-arrow {
+	position: absolute;
+	right: 0;
+	top: 0;
+	bottom: 0;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  color: black;        /* arver farge på SVG via currentColor */
+	padding: 0 10px;
+}
+
+
+/* Valgfritt: legg på hover-effekt */
+.submit-arrow:hover svg {
+  transform: translateX(2px); /* liten bevegelse til høyre */
+  transition: transform 0.2s ease;
+}
+
 
 form input,
 form textarea{
