--- a/styles/index.css
+++ b/styles/index.css
@@ -536,15 +536,6 @@ h2 {
 }
 
 
-/*CHATBOT-----------------------------------*/
-
-.chatbot-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* beholder proporsjoner, fyller, beskjærer */
-    object-position: center;
-}
 
 
 /*FOOTER-----------------------------------*/
@@ -711,7 +702,8 @@ label {
     }
 
 
-    .red-button.grotesk{ /*targeter elementer som har begge klassene */
+    .red-button.grotesk {
+        /*targeter elementer som har begge klassene */
         font-size: 1rem;
     }
 
