--- a/styles/chatbot.css
+++ b/styles/chatbot.css
@@ -41,12 +41,37 @@
 }
 
 #messages {
-   background-color: #F7F2DE;
     font-size: 1rem;
     font-family: "Arimo", sans-serif;
     font-weight: 100;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 
+}
+
+.message {
+    max-width: 75%;
+    padding: 0.5rem 1rem;
+    border-radius: 1rem;
+    word-wrap: break-word;
+}
+
+/* Botens chatteboble */
+.message.assistant {
+    background-color: #F7F2DE;
+    color: #0b0a08;
+    align-self: flex-start;
+    text-align: left;
+}
+
+/* Brukerens chatteboble */
+.message.user { 
+    background-color: #E1EAF0;
+    color: black;
+    align-self: flex-end;
+    text-align: right;
 }
 
 
@@ -61,6 +86,7 @@
     max-height: 44px;;
 
 }
+
 
 #input-area {
     /* row er egt default her, men setter det for å vise forskjellen */
